# ats-autopilot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ats_autopilot/: __init__.py  answers.py  cli.py  engine.py  profile.py  tracker.py
ats_autopilot/adapters/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  workday.py
ats_autopilot/resume/: __init__.py  facts.py  ingest.py  render.py  tailor.py  verify.py
config/: answers.yaml  facts.example.yaml  profile.example.yaml
scripts/: nightly_prep.cmd
tests/: test_answers.py  test_engine.py  test_ingest.py  test_review_queue.py  test_verify.py
tests/fixtures/: ashby_board.json  greenhouse_job.json
