[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-autopilot"
version = "0.1.0"
description = "Schema-driven, multi-ATS job-application engine with grounded (non-hallucinating) résumé tailoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Luis J. Becerra" }]
keywords = ["ats", "greenhouse", "lever", "job-application", "automation", "resume", "llm-grounding"]
dependencies = ["requests>=2.28", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ats-autopilot = "ats_autopilot.cli:main"

[tool.setuptools.packages.find]
include = ["ats_autopilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
